Added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -261,5 +261,9 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
 /.engineering_servers/PLC HMI/TcHmiSrv.pid
 /.engineering_servers/TcHmiProject1/TcHmiSrv.pid
+
+/.engineering_servers/TcHmiProject1/historize.db
+/.engineering_servers/TcHmiProject1/historize.db-journal
