--- a/.gitignore
+++ b/.gitignore
@@ -265,4 +265,4 @@ __pycache__/
 /.engineering_servers/TcHmiProject1/TcHmiSrv.pid
 *historize.db
 *historize.db-journal
-/.engineering_servers 
+/.engineering_servers/
