Speed Profile HMI screen

--- a/TcHmiProject1/Properties/tchmiconfig.json
+++ b/TcHmiProject1/Properties/tchmiconfig.json
@@ -40,6 +40,10 @@
     {
       "url": "Main.content",
       "preload": false
+    },
+    {
+      "url": "Speed_profile.content",
+      "preload": false
     }
   ],
   "views": [
