--- a/TcHmiProject1/Properties/tchmipublish.config.json
+++ b/TcHmiProject1/Properties/tchmipublish.config.json
@@ -1,1 +1,58 @@
-﻿[]
+﻿[
+  {
+    "isNew": false,
+    "profileName": "bret",
+    "publishMode": "TcHmi",
+    "targetDirectory": "",
+    "server": "",
+    "sitePath": "",
+    "destinationUrl": "",
+    "passiveMode": true,
+    "savePassword": true,
+    "deleteAllFilesBeforePublish": false,
+    "deleteExtensionDataBeforePublish": false,
+    "abortOnErrors": true,
+    "userName": "",
+    "encryptedPassword": "",
+    "tcHmiServerHost": "Bret-Netbook",
+    "tcHmiServerPort": "1010",
+    "socketTimeout": "45",
+    "clientCertificateCN": "",
+    "tcHmiUseTLS": false,
+    "useClientCertificate": false,
+    "tcHmiServerUserName": "__SystemAdministrator",
+    "encryptedTcHmiServerPassword": "ymWIEiQAJJokX/YZRXgssA==",
+    "tcHmiDestinationUrl": "http://Bret-Netbook:1010",
+    "publishConfiguration": "remote",
+    "tcHmiSavePassword": true,
+    "tcHmiIgnoreCertificateErrors": true
+  },
+  {
+    "isNew": false,
+    "profileName": "Netbook",
+    "publishMode": "TcHmi",
+    "targetDirectory": "",
+    "server": "",
+    "sitePath": "",
+    "destinationUrl": "",
+    "passiveMode": true,
+    "savePassword": true,
+    "deleteAllFilesBeforePublish": false,
+    "deleteExtensionDataBeforePublish": false,
+    "abortOnErrors": true,
+    "userName": "",
+    "encryptedPassword": "",
+    "tcHmiServerHost": "192.168.1.196",
+    "tcHmiServerPort": "1010",
+    "socketTimeout": "45",
+    "clientCertificateCN": "",
+    "tcHmiUseTLS": false,
+    "useClientCertificate": false,
+    "tcHmiServerUserName": "__SystemAdministrator",
+    "encryptedTcHmiServerPassword": "ymWIEiQAJJokX/YZRXgssA==",
+    "tcHmiDestinationUrl": "http://192.168.1.196:1010",
+    "publishConfiguration": "remote",
+    "tcHmiSavePassword": true,
+    "tcHmiIgnoreCertificateErrors": true
+  }
+]
