--- a/TcHmiProject1/Server/Extensions/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/TcHmiProject1/Server/Extensions/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -2929,6 +2929,6 @@
     "VIDEOSEGMENTSIZE": 1048576,
     "VIRTUALDIRECTORIES": {
         "/": "..\\..\\TcHmiProject1",
-        "/framework": "..\\..\\..\\..\\..\\..\\..\\TwinCAT\\Functions\\TE2000-HMI-Engineering\\Infrastructure\\TcHmiFramework\\1.10.1336.0"
+        "/framework": "C:\\TwinCAT\\Functions\\TE2000-HMI-Engineering\\Infrastructure\\TcHmiFramework\\1.10.1336.0"
     }
 }
