--- a/TcHmiProject1/Properties/tchmiconfig.tpl.json
+++ b/TcHmiProject1/Properties/tchmiconfig.tpl.json
@@ -65,6 +65,10 @@
     {
       "url": "Speed_profile.content",
       "preload": false
+    },
+    {
+      "url": "SpeedGuardian.content",
+      "preload": false
     }
   ],
   "views": [
@@ -99,7 +103,7 @@
   "symbols": {
     "internal": {
       "Amps": {
-        "value": 0.0,
+        "value": "0",
         "type": "tchmi:general#/definitions/Number",
         "persist": false,
         "readonly": false
@@ -117,74 +121,34 @@
         "readonly": false
       },
       "active": {
-        "value": true,
+        "value": "True",
         "type": "tchmi:general#/definitions/BOOL",
         "persist": false,
         "readonly": false
       },
       "userAllowed": {
-        "value": true,
+        "value": "True",
         "type": "tchmi:general#/definitions/BOOL",
         "persist": false,
         "readonly": false
       },
       "brakeStates": {
-        "value": {
-          "states": [
-            {
-              "color": "red",
-              "desc": "Invalid State"
-            },
-            {
-              "color": "red",
-              "desc": "Brake\nWear"
-            },
-            {
-              "color": "orange",
-              "desc": "Brake\nOn"
-            },
-            {
-              "color": "grey",
-              "desc": "Brake\nRubbing"
-            },
-            {
-              "color": "grey",
-              "desc": "Brake Not\nFully Off"
-            },
-            {
-              "color": "green",
-              "desc": "Brake\nOff"
-            }
-          ]
-        },
+        "value": "{\r\n  \"states\": [\r\n    {\r\n      \"color\": \"red\",\r\n      \"desc\": \"Invalid State\"\r\n    },\r\n    {\r\n      \"color\": \"red\",\r\n      \"desc\": \"Brake\\nWear\"\r\n    },\r\n    {\r\n      \"color\": \"orange\",\r\n      \"desc\": \"Brake\\nOn\"\r\n    },\r\n    {\r\n      \"color\": \"grey\",\r\n      \"desc\": \"Brake\\nRubbing\"\r\n    },\r\n    {\r\n      \"color\": \"grey\",\r\n      \"desc\": \"Brake Not\\nFully Off\"\r\n    },\r\n    {\r\n      \"color\": \"green\",\r\n      \"desc\": \"Brake\\nOff\"\r\n    }\r\n  ]\r\n}",
         "type": "tchmi:general#/definitions/Object",
         "persist": true,
         "readonly": true
       },
       "clutchStates": {
-        "value": {
-          "states": [
-            {
-              "color": "red",
-              "desc": "Invalid State"
-            },
-            {
-              "color": "green",
-              "desc": "Clutch\nIn"
-            },
-            {
-              "color": "blue",
-              "desc": "Clutch\nNot In"
-            },
-            {
-              "color": "orange",
-              "desc": "Clutch\nOut"
-            }
-          ]
-        },
+        "value": "{\r\n  \"states\": [\r\n    {\r\n      \"color\": \"red\",\r\n      \"desc\": \"Invalid State\"\r\n    },\r\n    {\r\n      \"color\": \"green\",\r\n      \"desc\": \"Clutch\\nIn\"\r\n    },\r\n    {\r\n      \"color\": \"blue\",\r\n      \"desc\": \"Clutch\\nNot In\"\r\n    },\r\n    {\r\n      \"color\": \"orange\",\r\n      \"desc\": \"Clutch\\nOut\"\r\n    }\r\n  ]\r\n}",
         "type": "tchmi:general#/definitions/Object",
         "persist": true,
         "readonly": true
+      },
+      "Lh_overwind": {
+        "value": "False",
+        "type": "tchmi:general#/definitions/BOOL",
+        "persist": false,
+        "readonly": false
       }
     }
   },
