Speed Guardian main screen added with simple simulation

--- a/TcHmiProject1/Server/Extensions/TcHmiSqliteHistorize/TcHmiSqliteHistorize.Config.default.json
+++ b/TcHmiProject1/Server/Extensions/TcHmiSqliteHistorize/TcHmiSqliteHistorize.Config.default.json
@@ -1,5 +1,17 @@
 {
     "historizedSymbolList": {
+        "PLC1.Gen.Lh_speed": {
+            "interval": "PT3H20M",
+            "maxEntries": 100000,
+            "recordingEnabled": true,
+            "rowLimit": 100000
+        },
+        "PLC1.Gen.Rh_speed": {
+            "interval": "PT3H20M",
+            "maxEntries": 100000,
+            "recordingEnabled": true,
+            "rowLimit": 100000
+        },
         "PLC1.Globals.Speed": {
             "interval": "PT0.1S",
             "maxEntries": 10000,
