--- a/TcHmiProject1/Server/Extensions/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/TcHmiProject1/Server/Extensions/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -1774,6 +1774,46 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.Gen.Lh_depth": {
+            "ACCESS": 3,
+            "CUSTOMERDATA": "",
+            "DOMAIN": "ADS",
+            "MAPPING": "PLC1::Gen::Lh_depth",
+            "SCHEMA": {
+                "$ref": "tchmi:general#/definitions/REAL"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.Gen.Lh_speed": {
+            "ACCESS": 3,
+            "CUSTOMERDATA": "",
+            "DOMAIN": "ADS",
+            "MAPPING": "PLC1::Gen::Lh_speed",
+            "SCHEMA": {
+                "$ref": "tchmi:general#/definitions/REAL"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.Gen.Rh_depth": {
+            "ACCESS": 3,
+            "CUSTOMERDATA": "",
+            "DOMAIN": "ADS",
+            "MAPPING": "PLC1::Gen::Rh_depth",
+            "SCHEMA": {
+                "$ref": "tchmi:general#/definitions/REAL"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.Gen.Rh_speed": {
+            "ACCESS": 3,
+            "CUSTOMERDATA": "",
+            "DOMAIN": "ADS",
+            "MAPPING": "PLC1::Gen::Rh_speed",
+            "SCHEMA": {
+                "$ref": "tchmi:general#/definitions/REAL"
+            },
+            "USEMAPPING": true
+        },
         "PLC1.Globals.Speed": {
             "ACCESS": 3,
             "CUSTOMERDATA": "",
@@ -2896,6 +2936,13 @@
     },
     "USERGROUPUSERS": {
         "TcHmiUserManagement": {
+            "Default": {
+                "USERGROUPUSERS_AUTO_LOGOFF": "P30D",
+                "USERGROUPUSERS_GROUPS": [
+                    "__SystemUsers"
+                ],
+                "USERGROUPUSERS_LOCALE": "project"
+            },
             "Frikkie": {
                 "USERGROUPUSERS_AUTO_LOGOFF": "P30D",
                 "USERGROUPUSERS_GROUPS": [
