--- a/TcHmiProject1/Properties/tchmipublish.config.json
+++ b/TcHmiProject1/Properties/tchmipublish.config.json
@@ -14,15 +14,15 @@
     "abortOnErrors": true,
     "userName": "",
     "encryptedPassword": "",
-    "tcHmiServerHost": "Bret-Netbook",
-    "tcHmiServerPort": "1010",
+    "tcHmiServerHost": "127.0.0.1",
+    "tcHmiServerPort": "3002",
     "socketTimeout": "45",
     "clientCertificateCN": "",
     "tcHmiUseTLS": false,
     "useClientCertificate": false,
     "tcHmiServerUserName": "__SystemAdministrator",
     "encryptedTcHmiServerPassword": "ymWIEiQAJJokX/YZRXgssA==",
-    "tcHmiDestinationUrl": "http://Bret-Netbook:1010",
+    "tcHmiDestinationUrl": "http://127.0.0.1:3002",
     "publishConfiguration": "remote",
     "tcHmiSavePassword": true,
     "tcHmiIgnoreCertificateErrors": true
