--- a/TcHmiProject1/Properties/tchmiconfig.json
+++ b/TcHmiProject1/Properties/tchmiconfig.json
@@ -93,6 +93,12 @@
     },
     {
       "url": "LoadSettings.js"
+    },
+    {
+      "url": "Functions/encodeToDispArr.js"
+    },
+    {
+      "url": "Functions/decodeFromArray.js"
     }
   ],
   "symbols": {
